[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/admob/src/core/components/General.gd" type="Script" id=1]
[ext_resource path="res://addons/admob/src/core/components/Enabled.gd" type="Script" id=2]

[node name="General" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="Enabled" type="CheckBox" parent="."]
margin_right = 592.0
margin_bottom = 24.0
pressed = true
text = "Enabled"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Enabled"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -334.0
margin_top = -46.0
margin_right = 334.0
margin_bottom = 46.0
dialog_text = "If \"Enabled\" is false then ads will no longer work, are you sure?

Note: You can disable ads if the user purchases by IAP, that's why this attribute can be useful."

[node name="ChildDirectedTreatment" type="CheckBox" parent="."]
margin_top = 28.0
margin_right = 592.0
margin_bottom = 52.0
text = "Child Directed Treatment"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxAdContentRating" type="HBoxContainer" parent="."]
margin_top = 56.0
margin_right = 592.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Key" type="Label" parent="MaxAdContentRating"]
margin_top = 3.0
margin_right = 132.0
margin_bottom = 17.0
text = "MaxAdContentRating"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Value" type="OptionButton" parent="MaxAdContentRating"]
margin_left = 136.0
margin_right = 183.0
margin_bottom = 20.0
text = "PG"
items = [ "G", null, false, 0, null, "PG", null, false, 1, null, "T", null, false, 2, null, "MA", null, false, 3, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Enabled" to="Enabled" method="_on_Enabled_pressed"]
[connection signal="confirmed" from="Enabled/ConfirmationDialog" to="Enabled" method="_on_ConfirmationDialog_confirmed"]
[connection signal="pressed" from="ChildDirectedTreatment" to="." method="_on_ChildDirectedTreatment_pressed"]
[connection signal="item_selected" from="MaxAdContentRating/Value" to="." method="_on_MaxAdContentRating_item_selected"]
